# axum-starter

./: Cargo.toml
core/: Cargo.toml
core/src/: context.rs  lib.rs  main.rs
crates/prisma/: Cargo.toml
crates/prisma-cli/: Cargo.toml
prisma/: schema.prisma
