[workspace]
resolver = "2"
members = [ "core","crates/*"]


[workspace.package]
version = "0.0.0"
edition = "2021"
authors = ["Ns2Kracy <ns2kracy@gmail.com>"]


[workspace.dependencies]
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust.git", tag = "0.6.10", features = [
    "sqlite",
    "migrations",
], default-features = false }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust.git", tag = "0.6.10", features = [
    "sqlite",
    "migrations",
], default-features = false }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108" }
