[package]
name = "core"
version.workspace = true
edition.workspace = true
authors.workspace = true
default-run = "core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
prisma-client-rust = { workspace = true }
prisma = { path = "../crates/prisma" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
tokio = { version = "1.34.0", features = ["full"] }
axum = { version = "0.7.1", features = ["tracing"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.0", features = ["full"] }
hyper = { version = "1.0.1", features = ["full"] }
